[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/ViewTimeScene.gd" type="Script" id=1]
[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Font/Roboto-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
RichTextLabel/colors/DataTextColor = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 22
font_data = ExtResource( 5 )

[node name="ViewTimeScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ScreenMargin" type="MarginContainer" parent="."]
margin_right = 480.0
margin_bottom = 720.0
theme = SubResource( 2 )
custom_constants/margin_right = 40
custom_constants/margin_top = 15
custom_constants/margin_left = 40
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenVBox" type="VBoxContainer" parent="ScreenMargin"]
margin_left = 40.0
margin_top = 15.0
margin_right = 440.0
margin_bottom = 705.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OptionMargin" type="MarginContainer" parent="ScreenMargin/ScreenVBox"]
margin_right = 400.0
margin_bottom = 63.0
custom_constants/margin_right = 5
custom_constants/margin_top = 15
custom_constants/margin_left = 5
custom_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="ScreenMargin/ScreenVBox/OptionMargin"]
margin_left = 5.0
margin_top = 15.0
margin_right = 395.0
margin_bottom = 48.0
size_flags_vertical = 0

[node name="SetOptionButton" type="OptionButton" parent="ScreenMargin/ScreenVBox/OptionMargin/HBoxContainer"]
margin_right = 193.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="SortingOptionButton" type="OptionButton" parent="ScreenMargin/ScreenVBox/OptionMargin/HBoxContainer"]
margin_left = 197.0
margin_right = 390.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="TitleMargin" type="MarginContainer" parent="ScreenMargin/ScreenVBox"]
margin_top = 67.0
margin_right = 400.0
margin_bottom = 167.0
rect_min_size = Vector2( 400, 100 )

[node name="Title" type="RichTextLabel" parent="ScreenMargin/ScreenVBox/TitleMargin"]
margin_right = 400.0
margin_bottom = 100.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "SetName"
text = "SetName"
scroll_active = false

[node name="DataMargin" type="MarginContainer" parent="ScreenMargin/ScreenVBox"]
margin_top = 171.0
margin_right = 400.0
margin_bottom = 651.0
rect_min_size = Vector2( 400, 480 )
custom_constants/margin_right = 5
custom_constants/margin_top = 30
custom_constants/margin_left = 5
custom_constants/margin_bottom = 30

[node name="DataScroll" type="ScrollContainer" parent="ScreenMargin/ScreenVBox/DataMargin"]
visible = false
margin_left = 5.0
margin_top = 30.0
margin_right = 395.0
margin_bottom = 450.0

[node name="DataText" type="RichTextLabel" parent="ScreenMargin/ScreenVBox/DataMargin"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 5.0
margin_top = 30.0
margin_right = 395.0
margin_bottom = 450.0
rect_clip_content = false
bbcode_enabled = true
bbcode_text = "I need some data, yo!"
text = "I need some data, yo!"

[node name="ButtonMargin" type="MarginContainer" parent="ScreenMargin/ScreenVBox"]
margin_top = 655.0
margin_right = 400.0
margin_bottom = 688.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100

[node name="ReturnButton" type="Button" parent="ScreenMargin/ScreenVBox/ButtonMargin"]
margin_left = 100.0
margin_right = 300.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 5 )
text = "Return"
[connection signal="item_selected" from="ScreenMargin/ScreenVBox/OptionMargin/HBoxContainer/SetOptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="ScreenMargin/ScreenVBox/OptionMargin/HBoxContainer/SortingOptionButton" to="." method="_on_SortingOptionButton_item_selected"]
[connection signal="pressed" from="ScreenMargin/ScreenVBox/ButtonMargin/ReturnButton" to="." method="_on_ReturnButton_pressed"]
